--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proteinomics",
+  "name": "doks",
   "version": "0.0.0",
   "description": "Doks theme",
   "author": "Hyas",
@@ -13,7 +13,7 @@
     "lint:styles": "stylelint --cache \"themes/doks/assets/scss/**/*.{css,sass,scss}\"",
     "lint:markdown": "markdownlint-cli2 \"*.md\" \"content/**/*.md\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "exec-bin node_modules/.bin/hugo/hugo --minify",
+    "build": "exec-bin node_modules/.bin/hugo/hugo --cleanDestinationDir --minify",
     "preview": "http-server --gzip --brotli --ext=html --cors",
     "clean": "npm run clean:build && npm run clean:lint && npm run clean:install",
     "clean:build": "shx rm -rf public resources .hugo_build.lock",
@@ -25,9 +25,11 @@
     "postinstall": "shx rm -rf node_modules/.bin/hugo && shx mkdir node_modules/.bin/hugo && shx cp node_modules/gethyas/node_modules/.bin/hugo/* node_modules/.bin/hugo"
   },
   "dependencies": {
-    "@hyas/doks-core": "^1.0.7"
+    "@hyas/doks-core": "^1.1.1"
   },
   "engines": {
-    "node": ">=16.12.0"
-  }
+    "node": ">=16.12.0",
+    "pnpm": ">=8.6.2"
+  },
+  "packageManager": "pnpm@8.6.2"
 }
